--- a/package.json
+++ b/package.json
@@ -9,26 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-native-community/checkbox": "^0.5.17",
-    "@react-native-community/slider": "4.5.6",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-community/slider": "5.0.1",
     "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^6.6.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.4.0",
     "axios": "^1.7.2",
-    "expo": "^53.0.15",
-    "expo-image-picker": "~16.1.4",
-    "expo-status-bar": "~2.2.3",
-    "react": "^19.0.0",
-    "react-native": "^0.79.4",
+    "expo": "54.0.20",
+    "expo-image-picker": "~17.0.8",
+    "expo-status-bar": "~3.0.8",
+    "react": "19.1.0",
+    "react-native": "0.81.5",
     "react-native-calendar-strip": "^2.2.6",
     "react-native-calendars": "^1.1305.0",
     "react-native-dotenv": "^3.4.11",
-    "react-native-gesture-handler": "~2.24.0",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
-    "react-native-svg": "15.11.2",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
     "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
