--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.4.0",
     "axios": "^1.7.2",
+    "dayjs": "^1.11.19",
     "expo": "54.0.20",
     "expo-image-picker": "~17.0.8",
     "expo-status-bar": "~3.0.8",
